syntax = "proto3";

package meshapi.gateway.examples.integration;

option go_package = "github.com/meshapi/grpc-rest-gateway/examples/internal/gen/integration";

message Details {
	oneof type {
		string type_name = 1;
		int32 type_id = 2;
	}
	string text = 3;
}

message TestMessage {
	string id = 1;
	int64 num = 2;
	oneof month {
		string month_name = 3;
		int32 month_num = 4;
	}
	oneof note {
		Details note_details = 5;
		string note_content = 6;
	}
	Details nested_detail = 7;
	repeated Details repeated_details = 8;
	map<string,string> table = 9;
}
